; ModuleID = '/home/carl/AnghaBench/esp-idf/components/efuse/src/extr_esp_efuse_api.c_esp_efuse_read_field_cnt.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/efuse/src/extr_esp_efuse_api.c_esp_efuse_read_field_cnt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ESP_OK = common dso_local global i32 0, align 4
@ESP_ERR_INVALID_ARG = common dso_local global i32 0, align 4
@esp_efuse_utility_count_once = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @esp_efuse_read_field_cnt(i32** %0, i64* %1) #0 {
  %3 = alloca i32**, align 8
  %4 = alloca i64*, align 8
  %5 = alloca i32, align 4
  store i32** %0, i32*** %3, align 8
  store i64* %1, i64** %4, align 8
  %6 = call i32 (...) @EFUSE_LOCK_ACQUIRE()
  %7 = load i32, i32* @ESP_OK, align 4
  store i32 %7, i32* %5, align 4
  %8 = load i32**, i32*** %3, align 8
  %9 = icmp eq i32** %8, null
  br i1 %9, label %13, label %10

10:                                               ; preds = %2
  %11 = load i64*, i64** %4, align 8
  %12 = icmp eq i64* %11, null
  br i1 %12, label %13, label %15

13:                                               ; preds = %10, %2
  %14 = load i32, i32* @ESP_ERR_INVALID_ARG, align 4
  store i32 %14, i32* %5, align 4
  br label %21

15:                                               ; preds = %10
  %16 = load i64*, i64** %4, align 8
  store i64 0, i64* %16, align 8
  %17 = load i32**, i32*** %3, align 8
  %18 = load i64*, i64** %4, align 8
  %19 = load i32, i32* @esp_efuse_utility_count_once, align 4
  %20 = call i32 @esp_efuse_utility_process(i32** %17, i64* %18, i32 0, i32 %19)
  store i32 %20, i32* %5, align 4
  br label %21

21:                                               ; preds = %15, %13
  %22 = call i32 (...) @EFUSE_LOCK_RELEASE()
  %23 = load i32, i32* %5, align 4
  ret i32 %23
}

declare dso_local i32 @EFUSE_LOCK_ACQUIRE(...) #1

declare dso_local i32 @esp_efuse_utility_process(i32**, i64*, i32, i32) #1

declare dso_local i32 @EFUSE_LOCK_RELEASE(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
